--- a/webpack/package.json
+++ b/webpack/package.json
@@ -27,10 +27,11 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "lodash.isequal": "^4.1.0",
     "material-ui": "^0.14.4",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
-    "react-router" : "^2.0.0",
+    "react-router": "^2.0.0",
     "react-tap-event-plugin": "^0.2.1"
   }
 }
