--- a/webpack/package.json
+++ b/webpack/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-react": "^3.13.1",
     "html-webpack-plugin": "^2.7.2",
     "react-hot-loader": "^1.3.0",
+    "react-textarea-autosize" : "^3.3.0",
     "transfer-webpack-plugin": "^0.1.4",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
