--- a/webpack/package.json
+++ b/webpack/package.json
@@ -21,6 +21,7 @@
     "eslint-loader": "^1.1.1",
     "eslint-plugin-react": "^3.13.1",
     "html-webpack-plugin": "^2.7.2",
+    "react-chartjs": "^0.7.3",
     "react-hot-loader": "^1.3.0",
     "react-textarea-autosize" : "^3.3.0",
     "transfer-webpack-plugin": "^0.1.4",
