--- a/webpack/package.json
+++ b/webpack/package.json
@@ -23,7 +23,7 @@
     "html-webpack-plugin": "^2.7.2",
     "react-chartjs": "^0.7.3",
     "react-hot-loader": "^1.3.0",
-    "react-textarea-autosize" : "^3.3.0",
+    "react-textarea-autosize": "^3.3.0",
     "transfer-webpack-plugin": "^0.1.4",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
@@ -32,6 +32,7 @@
     "lodash.isequal": "^4.1.0",
     "material-ui": "^0.14.4",
     "react": "^0.14.7",
+    "react-chartjs": "^0.7.3",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.0",
     "react-tap-event-plugin": "^0.2.1"
