--- a/webpack/package.json
+++ b/webpack/package.json
@@ -23,6 +23,7 @@
     "html-webpack-plugin": "^2.7.2",
     "react-hot-loader": "^1.3.0",
     "react-textarea-autosize" : "^3.3.0",
+    "react-treeview" : "^0.4.3",
     "transfer-webpack-plugin": "^0.1.4",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
