--- a/webpack/package.json
+++ b/webpack/package.json
@@ -21,8 +21,9 @@
     "eslint-loader": "^1.1.1",
     "eslint-plugin-react": "^3.13.1",
     "html-webpack-plugin": "^2.7.2",
+    "ladda": "^3.0.0",
     "react-hot-loader": "^1.3.0",
-    "react-textarea-autosize" : "^3.3.0",
+    "react-textarea-autosize": "^3.3.0",
     "transfer-webpack-plugin": "^0.1.4",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
@@ -32,6 +33,7 @@
     "material-ui": "^0.14.4",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-ladda": "^4.0.1",
     "react-router": "^2.0.0",
     "react-tap-event-plugin": "^0.2.1"
   }
