--- a/webpack/package.json
+++ b/webpack/package.json
@@ -23,6 +23,7 @@
     "html-webpack-plugin": "^2.7.2",
     "ladda": "^4.0.1",
     "react-hot-loader": "^1.3.0",
+    "react-sticky": "^3.0.0",
     "react-textarea-autosize": "^3.3.0",
     "transfer-webpack-plugin": "^0.1.4",
     "webpack": "^1.12.9",
