small update fix

--- a/webpack/package.json
+++ b/webpack/package.json
@@ -21,8 +21,8 @@
     "eslint-loader": "^1.1.1",
     "eslint-plugin-react": "^3.13.1",
     "html-webpack-plugin": "^2.7.2",
-    "ladda": "^4.0.1",
     "react-hot-loader": "^1.3.0",
+    "react-ladda": "^4.0.1",
     "react-textarea-autosize": "^3.3.0",
     "transfer-webpack-plugin": "^0.1.4",
     "webpack": "^1.12.9",
