--- a/webpack/package.json
+++ b/webpack/package.json
@@ -23,6 +23,7 @@
     "html-webpack-plugin": "^2.7.2",
     "react-hot-loader": "^1.3.0",
     "react-ladda": "^4.0.1",
+    "react-smart-time-ago": "^1.0.5",
     "react-textarea-autosize": "^3.3.0",
     "transfer-webpack-plugin": "^0.1.4",
     "webpack": "^1.12.9",
