--- a/webpack/package.json
+++ b/webpack/package.json
@@ -22,7 +22,7 @@
     "eslint-plugin-react": "^3.13.1",
     "html-webpack-plugin": "^2.7.2",
     "react-hot-loader": "^1.3.0",
-    "react-textarea-autosize" : "^3.3.0",
+    "react-textarea-autosize": "^3.3.0",
     "transfer-webpack-plugin": "^0.1.4",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
@@ -33,6 +33,7 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.0",
-    "react-tap-event-plugin": "^0.2.1"
+    "react-tap-event-plugin": "^0.2.1",
+    "victory": "^0.4.2"
   }
 }
