--- a/webpack/package.json
+++ b/webpack/package.json
@@ -9,6 +9,9 @@
   "scripts": {
     "start": "./build.sh"
   },
+  "babel": {
+    "preset": ["es2015", "react"]
+  },
   "private": true,
   "devDependencies": {
     "babel-core": "^6.3.26",
@@ -17,6 +20,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-runtime": "^6.3.19",
+    "babel-plugin-transform-object-rest-spread": "^6.6.5",
     "eslint": "^1.10.3",
     "eslint-loader": "^1.1.1",
     "eslint-plugin-react": "^3.13.1",
