--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
         <react-gwt.version>0.1.0-SNAPSHOT</react-gwt.version>
         <material-ui-gwt.version>0.1.0-SNAPSHOT</material-ui-gwt.version>
         <moment-gwt.version>0.1.0-SNAPSHOT</moment-gwt.version>
+        <lodash-gwt.version>0.1.0-SNAPSHOT</lodash-gwt.version>
         <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
         <gwt-maven-plugin.version>2.8.0-SNAPSHOT</gwt-maven-plugin.version>
         <build-helper-maven-plugin.version>1.10</build-helper-maven-plugin.version>
@@ -151,6 +152,12 @@
             <artifactId>moment-gwt</artifactId>
             <version>${moment-gwt.version}</version>
         </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>io.clickhandler</groupId>-->
+            <!--<artifactId>lodash-gwt</artifactId>-->
+            <!--<version>${lodash-gwt.version}</version>-->
+        <!--</dependency>-->
 
     </dependencies>
 
